@@ -113,6 +113,7 @@ void list_mark_controlid_ready(GList * list, gint id);
 void list_mark_controlid_cancelled(GList * list, gint id, gboolean cancelled);
 void list_mark_id_played(GList * list, gint id);
 ListItem *list_find_next_playable(GList * list);
+void list_qualify_url(GList * list, gchar *page_url);
 GList *list_clear(GList * list);
 void list_dump(GList * list);
 GList *list_parse_qt(GList * list, ListItem * item);
